# loto_forecast_project

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  run_operations_dashboard.sh  start_loto_app.sh
docs/: 00_overview.md  01_requirements_definition.md  02_basic_design.md  03_detailed_function_design.md  04_implementation_plan.md  05_unit_test_spec_whitebox.md  06_integration_test_spec.md  07_system_test_spec_blackbox.md  08_db_schema_design.md  09_detailed_table_design.md  10_operations_runbook.md  11_directory_design.md  12_commands.md  13_meta_automodel_unified_dataset_design.md  14_nf_resource_analytics_requirements_definition.md  15_nf_resource_analytics_basic_design.md  16_nf_resource_analytics_detailed_function_design.md  17_nf_resource_analytics_db_schema_design.md  18_nf_resource_analytics_detailed_table_design.md  19_nf_resource_analytics_unit_test_spec_whitebox.md  20_nf_resource_analytics_system_test_spec_blackbox.md  21_nf_resource_analytics_screen_design.md  22_nf_resource_analytics_operations_runbook.md  23_harness_engineering_design.md  24_toolchain_setup.md  25_context_harness_design.md  DEVELOPMENT_HISTORY.md  UV_SETUP.md  operations_dashboard_artifact_generation_report.md  operations_dashboard_db_persistence_report.md  operations_dashboard_debug_runbook.md  operations_dashboard_dynamic_analysis_report.md  operations_dashboard_exhaustive_test_plan.md  operations_dashboard_operation_manual.md  ui_redesign_notification_plan.md
docs/claude/: arch.md  commands_ref.md  db_schemas.md  exog_convention.md
docs/context/: 00_context_index.md  01_execution_contract.md  02_decision_policy.md  03_context_packet.md  04_tooling_scope.md  best_practices_registry.yaml
docs/lib_docs/: .~lock.時系列予測_実行イベント_タイムライン一覧.xlsx#  ____________________________.csv  arviz_all_codegen.yaml  async_xai_bundle_20260220_002800.json  benchmarks_all_codegen.yaml  chronos-forecasting_scripts_evaluation_agg-relative-score_all_codegen.yaml  coreforecast_all_codegen.yaml  dowhy_all_codegen.yaml  econml_all_codegen.yaml  evaluate_all_codegen.yaml  giskard_all_codegen.yaml  merlion_dashboard_selected_codegen_details.yaml  mlforecast_all_codegen.yaml  networkx_all_codegen.yaml  neuralforecast_all_codegen.yaml  pgmpy_all_codegen.yaml  pingouin_all_codegen.yaml  pyod_all_codegen.yaml  pypots_all_codegen.yaml  schema_snapshot.yaml  skforecast_all_codegen.yaml  skforecast_skforecast_ValidCodegenTargets.csv  statsforecast_all_codegen.yaml  streamlit_all_codegen.yaml  tbats_all_codegen.yaml  tigramite_causal_effects_all_codegen.yaml  timesfm_all_codegen.yaml  tsfel_all_codegen.yaml  uni2ts_all_codegen.yaml  utilsforecast_all_codegen.yaml  時系列予測_実行イベント_タイムライン一覧.xlsx
docs/prompts/: hernes.md  val.md
docs/repair/: CHANGE_MANIFEST.json  CHANGE_MANIFEST_V3.json  FULL_REPAIR_REPORT.md  FULL_REPAIR_REPORT_V3.md  OBSERVABILITY_V7.md  REMOVED_FILES_MANIFEST.md  SCREENSHOT_FEATURE_AUTOMATION_V10.md  SECURITY_BACKLOG.md  SETUP_AND_RUN_COMMANDS.md  SETUP_AND_VERIFY_COMMANDS_V3.md  UPLOAD_PACKAGE_V17.md  UPLOAD_PACKAGE_V18_COMPLETE.md  V11_STUCK_PREVENTION.md  V12_CHANGE_MANIFEST.json  V12_PROGRESS_BAR_REPORT.md  V12_SETUP_AND_CAPTURE_COMMANDS.md  V13_CHANGE_MANIFEST.json  V13_PROGRESS_TIMEOUT_FIX.md  V14_EXEC_PERMISSION_AND_CLEANUP.md  V15_BASH_INVOCATION_FIX.md  V15_CHANGE_MANIFEST.json  V16_CHANGE_MANIFEST.json  V16_PLAYWRIGHT_LOCATOR_FIX_REPORT.md  V3_AUDIT_EVIDENCE.json  V4_PATCH_NOTES.md  V5_SETUP_AND_VERIFY_COMMANDS.md  V5_UV_STATIC_ENV_PATCH.md  V6_PATCH_NOTES.md  V7_CHANGE_MANIFEST.json  V7_REPAIR_REPORT.md  V7_SETUP_AND_VERIFY_COMMANDS.md  V8_CHANGE_MANIFEST.json  V8_SETUP_AND_DIAGNOSE_COMMANDS.md  V8_STARTUP_REPAIR.md  V9_CHANGE_MANIFEST.json  V9_SETUP_AND_VERIFY_COMMANDS.md  V9_UI_REDESIGN.md
docs/ui_audit/: operations_dashboard_audit.md  operations_dashboard_coverage_plan.md  operations_dashboard_test_matrix.md  panel_coverage_recovery_plan.md  panel_renderer_decomposition_plan.md
scripts/: analyze_nf_artifact.py  bootstrap_context_lab.sh  build_unified_dataset_fast.sh  capture_app_screenshots.sh  check_dashboard_import.py  check_playwright_chromium.py  collect_browser_observability.py  context_preflight.sh  cron_run_feature_pipeline.sh  diagnose_dashboard_startup.sh  diagnose_stuck_processes.sh  export_dataset_audit_package.sh  fix_style.sh  install_wsl_automation.sh  kill_loto_observability_processes.sh  linux_browser_probe.mjs  observability_summary.py  package_analysis_upload.py  package_complete_analysis_upload.sh  repair_static.sh  run_all.sh  run_async_backend_api.sh  run_codex_exhaustive.sh  run_dashboard_observability.sh  run_dataset_feature_table_job.py  run_dataset_feature_table_job.sh  run_fast_meta_pipeline.sh  run_local_nf_full_pipeline.sh  run_local_nf_meta_create_and_pyspark.sh  run_meta_automodel_create.sh  run_model_save_load_analyze.sh  run_table_pyspark.sh  setup_uv.sh  setup_uv_full.sh  start_dashboard_and_capture_screenshots.sh  submit_demo_async_task.sh  verify_static.sh  windows_chrome_cdp_probe.ps1  windows_detached_write_test.ps1  windows_non_headless_final_probe.cmd  (+5 more)
scripts/context_lab/: audit_context_engineering.py  audit_harness_engineering.py  audit_prompt_engineering.py  build_context_packet.py  common.py  run_all.py
src/loto_forecast/: __init__.py  cli.py  pipeline_hooks.py
src/resources/: __init__.py  chronos_exog_pipeline.py  config.py  context.py  exog_pipeline.py  metrics.py  sampling.py  span.py  timesfm_exog_pipeline.py  uni2ts_exog_pipeline.py  utils.py
tests/e2e/: conftest.py  operations_dashboard_redesign_ui_check.mjs  operations_dashboard_ui_check.mjs  test_operations_dashboard_playwright.py
tests/integration/: test_smoke.py
tests/streamlit/: test_operations_dashboard_apptest.py  test_operations_dashboard_redesign.py
tests/unit/: _streamlit_test_double.py  test_async_api_endpoints.py  test_async_backend_core.py  test_autoformer_safe_topk_patch.py  test_chronos_exog_pipeline.py  test_cli_json_arg.py  test_codegen_catalog.py  test_dashboard_db_admin_panel_formatter.py  test_dashboard_db_admin_panel_helpers.py  test_dataset_loader.py  (+41 more)
(+81 files in other folders)
